Indenting code and replacing space for tabs as ESLint expects

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,11 @@
     "plugins": [
         "react"
     ],
-    "rules": {}
+    "rules": {
+        "indent": ["error", "tab"],
+        "allowIndentationTabs": 0,
+        "no-tabs": 0,
+        "no-trailing-spaces": 0,
+        "space-before-function-paren": 0
+    }
 }
