--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "google-map-react": "^1.1.5",
+    "google-maps-react": "^2.0.2",
     "hamburgers": "^1.1.3",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
