Fix - Lint Package Json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "sass": "^1.22.10"
   },
   "scripts": {
-    "start": "react-scripts start lint",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
