--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "google-maps-react": "^2.0.2",
     "hamburgers": "^1.1.3",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-map-gl": "^5.0.11",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-transition-group": "^4.3.0",
