--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-click-outside": "^3.0.1",
     "react-dom": "^16.9.0",
     "react-map-gl": "^5.0.11",
     "react-router-dom": "^5.0.1",
